RESOLVED FIXED86502
[BlackBerry] InputHandler missing an include
https://bugs.webkit.org/show_bug.cgi?id=86502
Summary [BlackBerry] InputHandler missing an include
gmak
Reported 2012-05-15 11:01:09 PDT
Missing an include which causes build errors when other changes are made.
Attachments
patch with commit log (1.76 KB, patch)
2012-05-15 11:18 PDT, gmak
darin: review+
webkit.review.bot: commit-queue-
Patch - moved line (1.77 KB, patch)
2012-05-16 07:40 PDT, gmak
no flags
gmak
Comment 1 2012-05-15 11:18:13 PDT
Created attachment 142011 [details] patch with commit log
Darin Adler
Comment 2 2012-05-15 13:05:15 PDT
Comment on attachment 142011 [details] patch with commit log OK
WebKit Review Bot
Comment 3 2012-05-15 14:34:33 PDT
Comment on attachment 142011 [details] patch with commit log Rejecting attachment 142011 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Liam Quinn found in /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12685919
Antonio Gomes
Comment 4 2012-05-15 20:42:07 PDT
Comment on attachment 142011 [details] patch with commit log View in context: https://bugs.webkit.org/attachment.cgi?id=142011&action=review > Source/WebKit/blackberry/ChangeLog:5 > + Reviewed Internally by Liam Quinn. move this line down below to "Reviewed by"
gmak
Comment 5 2012-05-16 07:40:59 PDT
Created attachment 142260 [details] Patch - moved line Moved reviewedBy line
Rob Buis
Comment 6 2012-05-16 07:55:40 PDT
Comment on attachment 142260 [details] Patch - moved line View in context: https://bugs.webkit.org/attachment.cgi?id=142260&action=review Ok. > Source/WebKit/blackberry/ChangeLog:6 > + Reviewed by NOBODY (OOPS!). Normally you have an empty line after Reviewed by.
WebKit Review Bot
Comment 7 2012-05-16 08:26:24 PDT
Comment on attachment 142260 [details] Patch - moved line Clearing flags on attachment: 142260 Committed r117292: <http://trac.webkit.org/changeset/117292>
WebKit Review Bot
Comment 8 2012-05-16 08:26:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.