Add missing include that was causing build errors. https://bugs.webkit.org/show_bug.cgi?id=86502

Patch by Genevieve Mak <gmak@rim.com> on 2012-05-16
Reviewed by Rob Buis.
Reviewed Internally by Liam Quinn.

* WebKitSupport/InputHandler.cpp:

Canonical link: https://commits.webkit.org/104218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117292 268f45cc-cd09-0410-ab3c-d52691b4dbfc